--- a/public/index.html
+++ b/public/index.html
@@ -76,8 +76,26 @@
     <!-- Default meta description (can be overridden via React Helmet) -->
     <meta
       name="description"
-      content="Luxury Design, Project Management, Engineering Consultancy, Interior Design, Landscape & Construction."
+      content="Khales - Premier Luxury Design & Construction Management in Dubai. Expert interior design, project oversight, and engineering solutions for premium spaces."
     />
+    <meta property="og:title" content="Khales Luxury Design & Construction" />
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ProfessionalService",
+        "name": "Khales - Luxury Design & Project Management",
+        "image": "/logo.png",
+        "telephone": "+971-4-123-4567",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Business Bay",
+          "addressLocality": "Dubai",
+          "addressCountry": "AE"
+        }
+      }
+    </script>
     <link rel="canonical" href="https://nezarabouhamdan.github.io/Khales/" />
     <title>Khales - Luxury Design & Project Management</title>
   </head>
